--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/chat_message_container"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
 
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="fill_parent" />
+    <ImageView
+        android:id="@+id/chat_message_profile_picture"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:padding="5dp"
+        android:src="@drawable/default_fb_profile_picture" />
 
+    <TextView
+        android:layout_toRightOf="@id/chat_message_profile_picture"
+        android:id="@+id/chat_message_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
